# server/dto/response/user.go
@@ -4,12 +4,12 @@ import (
 	"project/model/system"
 )
 
-type SysUserResponse struct {
-	User system.SysUser `json:"user"`
+type UserResponse struct {
+	User system.User `json:"user"`
 }
 
 type LoginResponse struct {
-	User      system.SysUser `json:"user"`
-	Token     string         `json:"token"`
-	ExpiresAt int64          `json:"expiresAt"`
+	User      system.User `json:"user"`
+	Token     string      `json:"token"`
+	ExpiresAt int64       `json:"expiresAt"`
 }
