# server/handler/v1/admin/login.go
@@ -22,34 +22,45 @@ import (
 var store = base64Captcha.DefaultMemStore
 
 type baseHandler struct {
-	service    *service.UserService
-	serviceJWT *service.JwtService
+	userService *service.UserService
+	jwtService  *service.JwtService
 }
 
 func NewBaseHandler() *baseHandler {
 	return &baseHandler{
-		service:    &service.UserService{},
-		serviceJWT: &service.JwtService{},
+		userService: &service.UserService{},
+		jwtService:  &service.JwtService{},
 	}
 }
 
 func (h *baseHandler) Router(router *gin.RouterGroup) {
 	apiRouter := router.Group("basic").Use(middleware.OperationRecord())
 	{
-		apiRouter.POST("login", h.Login)
-		apiRouter.POST("captcha", h.Captcha)
+		apiRouter.POST("login", h.login)
+		apiRouter.POST("captcha", h.captcha)
 	}
 }
 
-func (h *baseHandler) RouterMw(router *gin.RouterGroup) {
-	apiRouter := router.Group("user").Use(middleware.OperationRecord())
-	{
-		apiRouter.POST("register", h.Register)                 // 用户注册账号
-		apiRouter.POST("changePassword", h.ChangePassword)     // 用户修改密码
-		apiRouter.POST("getUserList", h.GetUserList)           // 分页获取用户列表
-		apiRouter.POST("setUserAuthority", h.SetUserAuthority) // 设置用户权限
-		apiRouter.DELETE("deleteUser", h.DeleteUser)           // 删除用户
-		apiRouter.PUT("setUserInfo", h.SetUserInfo)            // 设置用户信息
+// @Tags Base
+// @Summary 生成验证码
+// @Security ApiKeyAuth
+// @accept application/json
+// @Produce application/json
+// @Success 200 {string} string "{"success":true,"data":{},"msg":"验证码获取成功"}"
+// @Router /base/captcha [post]
+func (h *baseHandler) captcha(c *gin.Context) {
+	// 字符,公式,验证码配置
+	// 生成默认数字的driver
+	driver := base64Captcha.NewDriverDigit(zvar.Config.Captcha.ImgHeight, zvar.Config.Captcha.ImgWidth, zvar.Config.Captcha.KeyLong, 0.7, 80)
+	cp := base64Captcha.NewCaptcha(driver, store)
+	if id, b64s, err := cp.Generate(); err != nil {
+		zvar.Log.Error("验证码获取失败!", zap.Any("err", err))
+		response.FailWithMessage("验证码获取失败", c)
+	} else {
+		response.OkWithDetailed(response.SysCaptchaResponse{
+			CaptchaId: id,
+			PicPath:   b64s,
+		}, "验证码获取成功", c)
 	}
 }
 
@@ -59,7 +70,7 @@ func (h *baseHandler) RouterMw(router *gin.RouterGroup) {
 // @Param data body request.Login true "用户名, 密码, 验证码"
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"登陆成功"}"
 // @Router /base/login [post]
-func (h *baseHandler) Login(c *gin.Context) {
+func (h *baseHandler) login(c *gin.Context) {
 	var l request.Login
 	_ = c.ShouldBindJSON(&l)
 	if err := utils.Verify(l, utils.LoginVerify); err != nil {
@@ -67,8 +78,8 @@ func (h *baseHandler) Login(c *gin.Context) {
 		return
 	}
 	if store.Verify(l.CaptchaId, l.Captcha, true) {
-		u := &system.SysUser{Username: l.Username, Password: l.Password}
-		if err, user := h.service.Login(u); err != nil {
+		u := &system.User{Username: l.Username, Password: l.Password}
+		if err, user := h.userService.Login(u); err != nil {
 			zvar.Log.Error("登陆失败! 用户名不存在或者密码错误!", zap.Any("err", err))
 			response.FailWithMessage("用户名不存在或者密码错误", c)
 		} else {
@@ -80,7 +91,7 @@ func (h *baseHandler) Login(c *gin.Context) {
 }
 
 // 登录以后签发jwt
-func (h *baseHandler) tokenNext(c *gin.Context, user system.SysUser) {
+func (h *baseHandler) tokenNext(c *gin.Context, user system.User) {
 	j := &middleware.JWT{SigningKey: []byte(zvar.Config.JWT.SigningKey)} // 唯一签名
 	claims := request.CustomClaims{
 		UUID:        user.UUID,
@@ -109,8 +120,8 @@ func (h *baseHandler) tokenNext(c *gin.Context, user system.SysUser) {
 		}, "登录成功", c)
 		return
 	}
-	if err, jwtStr := h.serviceJWT.GetRedisJWT(user.Username); err == redis.Nil {
-		if err := h.serviceJWT.SetRedisJWT(token, user.Username); err != nil {
+	if err, jwtStr := h.jwtService.GetRedisJWT(user.Username); err == redis.Nil {
+		if err := h.jwtService.SetRedisJWT(token, user.Username); err != nil {
 			zvar.Log.Error("设置登录状态失败!", zap.Any("err", err))
 			response.FailWithMessage("设置登录状态失败", c)
 			return
@@ -126,11 +137,11 @@ func (h *baseHandler) tokenNext(c *gin.Context, user system.SysUser) {
 	} else {
 		var blackJWT system.JwtBlacklist
 		blackJWT.Jwt = jwtStr
-		if err := h.serviceJWT.InBlacklist(blackJWT); err != nil {
+		if err := h.jwtService.InBlacklist(blackJWT); err != nil {
 			response.FailWithMessage("jwt作废失败", c)
 			return
 		}
-		if err := h.serviceJWT.SetRedisJWT(token, user.Username); err != nil {
+		if err := h.jwtService.SetRedisJWT(token, user.Username); err != nil {
 			response.FailWithMessage("设置登录状态失败", c)
 			return
 		}
@@ -139,176 +150,5 @@ func (h *baseHandler) tokenNext(c *gin.Context, user system.SysUser) {
 			Token:     token,
 			ExpiresAt: claims.StandardClaims.ExpiresAt * 1000,
 		}, "登录成功", c)
-	}
-}
-
-// @Tags SysUser
-// @Summary 用户注册账号
-// @Produce  application/json
-// @Param data body request.Register true "用户名, 昵称, 密码, 角色ID"
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"注册成功"}"
-// @Router /user/register [post]
-func (h *baseHandler) Register(c *gin.Context) {
-	var r request.Register
-	_ = c.ShouldBindJSON(&r)
-	if err := utils.Verify(r, utils.RegisterVerify); err != nil {
-		response.FailWithMessage(err.Error(), c)
-		return
-	}
-	user := &system.SysUser{Username: r.Username, NickName: r.NickName, Password: r.Password, HeaderImg: r.HeaderImg, AuthorityId: r.AuthorityId}
-	err, userReturn := h.service.Register(*user)
-	if err != nil {
-		zvar.Log.Error("注册失败!", zap.Any("err", err))
-		response.FailWithDetailed(response.SysUserResponse{User: userReturn}, "注册失败", c)
-	} else {
-		response.OkWithDetailed(response.SysUserResponse{User: userReturn}, "注册成功", c)
-	}
-}
-
-// @Tags SysUser
-// @Summary 用户修改密码
-// @Security ApiKeyAuth
-// @Produce  application/json
-// @Param data body request.ChangePasswordStruct true "用户名, 原密码, 新密码"
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"修改成功"}"
-// @Router /user/changePassword [put]
-func (h *baseHandler) ChangePassword(c *gin.Context) {
-	var user request.ChangePasswordStruct
-	_ = c.ShouldBindJSON(&user)
-	if err := utils.Verify(user, utils.ChangePasswordVerify); err != nil {
-		response.FailWithMessage(err.Error(), c)
-		return
-	}
-	u := &system.SysUser{Username: user.Username, Password: user.Password}
-	if err, _ := h.service.ChangePassword(u, user.NewPassword); err != nil {
-		zvar.Log.Error("修改失败!", zap.Any("err", err))
-		response.FailWithMessage("修改失败，原密码与当前账户不符", c)
-	} else {
-		response.OkWithMessage("修改成功", c)
-	}
-}
-
-// @Tags SysUser
-// @Summary 分页获取用户列表
-// @Security ApiKeyAuth
-// @accept application/json
-// @Produce application/json
-// @Param data body request.PageInfo true "页码, 每页大小"
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"获取成功"}"
-// @Router /user/getUserList [post]
-func (h *baseHandler) GetUserList(c *gin.Context) {
-	var pageInfo request.PageInfo
-	_ = c.ShouldBindJSON(&pageInfo)
-	if err := utils.Verify(pageInfo, utils.PageInfoVerify); err != nil {
-		response.FailWithMessage(err.Error(), c)
-		return
-	}
-	if err, list, total := h.service.GetUserInfoList(pageInfo); err != nil {
-		zvar.Log.Error("获取失败!", zap.Any("err", err))
-		response.FailWithMessage("获取失败", c)
-	} else {
-		response.OkWithDetailed(response.PageResult{
-			List:     list,
-			Total:    total,
-			Page:     pageInfo.Page,
-			PageSize: pageInfo.PageSize,
-		}, "获取成功", c)
-	}
-}
-
-// @Tags SysUser
-// @Summary 设置用户权限
-// @Security ApiKeyAuth
-// @accept application/json
-// @Produce application/json
-// @Param data body request.SetUserAuth true "用户UUID, 角色ID"
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"修改成功"}"
-// @Router /user/setUserAuthority [post]
-func (h *baseHandler) SetUserAuthority(c *gin.Context) {
-	var sua request.SetUserAuth
-	_ = c.ShouldBindJSON(&sua)
-	if UserVerifyErr := utils.Verify(sua, utils.SetUserAuthorityVerify); UserVerifyErr != nil {
-		response.FailWithMessage(UserVerifyErr.Error(), c)
-		return
-	}
-	if err := h.service.SetUserAuthority(sua.UUID, sua.AuthorityId); err != nil {
-		zvar.Log.Error("修改失败!", zap.Any("err", err))
-		response.FailWithMessage("修改失败", c)
-	} else {
-		response.OkWithMessage("修改成功", c)
-	}
-}
-
-// @Tags SysUser
-// @Summary 删除用户
-// @Security ApiKeyAuth
-// @accept application/json
-// @Produce application/json
-// @Param data body request.GetById true "用户ID"
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"删除成功"}"
-// @Router /user/deleteUser [delete]
-func (h *baseHandler) DeleteUser(c *gin.Context) {
-	var reqId request.GetById
-	_ = c.ShouldBindJSON(&reqId)
-	if err := utils.Verify(reqId, utils.IdVerify); err != nil {
-		response.FailWithMessage(err.Error(), c)
-		return
-	}
-	jwtId := utils.GetUserID(c)
-	if jwtId == uint(reqId.ID) {
-		response.FailWithMessage("删除失败, 自杀失败", c)
-		return
-	}
-	if err := h.service.DeleteUser(reqId.ID); err != nil {
-		zvar.Log.Error("删除失败!", zap.Any("err", err))
-		response.FailWithMessage("删除失败", c)
-	} else {
-		response.OkWithMessage("删除成功", c)
-	}
-}
-
-// @Tags SysUser
-// @Summary 设置用户信息
-// @Security ApiKeyAuth
-// @accept application/json
-// @Produce application/json
-// @Param data body system.SysUser true "ID, 用户名, 昵称, 头像链接"
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"设置成功"}"
-// @Router /user/setUserInfo [put]
-func (h *baseHandler) SetUserInfo(c *gin.Context) {
-	var user system.SysUser
-	_ = c.ShouldBindJSON(&user)
-	if err := utils.Verify(user, utils.IdVerify); err != nil {
-		response.FailWithMessage(err.Error(), c)
-		return
-	}
-	if err, ReqUser := h.service.SetUserInfo(user); err != nil {
-		zvar.Log.Error("设置失败!", zap.Any("err", err))
-		response.FailWithMessage("设置失败", c)
-	} else {
-		response.OkWithDetailed(gin.H{"userInfo": ReqUser}, "设置成功", c)
-	}
-}
-
-// @Tags Base
-// @Summary 生成验证码
-// @Security ApiKeyAuth
-// @accept application/json
-// @Produce application/json
-// @Success 200 {string} string "{"success":true,"data":{},"msg":"验证码获取成功"}"
-// @Router /base/captcha [post]
-func (h *baseHandler) Captcha(c *gin.Context) {
-	// 字符,公式,验证码配置
-	// 生成默认数字的driver
-	driver := base64Captcha.NewDriverDigit(zvar.Config.Captcha.ImgHeight, zvar.Config.Captcha.ImgWidth, zvar.Config.Captcha.KeyLong, 0.7, 80)
-	cp := base64Captcha.NewCaptcha(driver, store)
-	if id, b64s, err := cp.Generate(); err != nil {
-		zvar.Log.Error("验证码获取失败!", zap.Any("err", err))
-		response.FailWithMessage("验证码获取失败", c)
-	} else {
-		response.OkWithDetailed(response.SysCaptchaResponse{
-			CaptchaId: id,
-			PicPath:   b64s,
-		}, "验证码获取成功", c)
 	}
 }
